<resources>
    <string name="app_name">Погода (тестовое)</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="temp">Температура</string>
    <string name="pressure">Давление</string>
    <string name="humidity">Влажность</string>
    <string name="clouds">Облачность</string>
    <string name="wind">Ветер</string>

</resources>
